--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/minor2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tradetracker</title>
+    <meta name="theme-color" content="#ffcbe4" />
+    <meta name="description" content="Trading website" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/png" href="/minor2.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://kit.fontawesome.com/683cf4083c.js" crossorigin="anonymous"></script>
+    <title>Tradedge</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("/sw.js")
+            .then((reg) => console.log("Service Worker registered:", reg))
+            .catch((err) => console.log("Service Worker error:", err));
+        });
+      }
+    </script>
   </body>
 </html>
