--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#ffcbe4" />
     <meta name="description" content="Trading website" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" type="image/png" href="/minor2.png" />
+    <link rel="icon" type="image/png" href="/icons/logo-32.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
